# discord_bot

./: .gitignore  Cargo.toml  README.md  saved_data.json  saved_event.json
src/: main.rs  slash.rs  utils.rs
src/commands/: delete.rs  event.rs  events.rs  join.rs  mod.rs  new.rs  quit.rs  refresh.rs  setup.rs  team.rs
src/commands/event/: event.rs  msg.rs
src/commands/events/: event_builder.rs  mod.rs
src/commands/utils/: event_message.rs  mod.rs
src/events/: events.rs
src/events/event/: event.rs  mod.rs  team.rs
src/utils/: constants.rs  data.rs  event.rs  events.rs  interface.rs  mod.rs  msg.rs  participant.rs  preference.rs  prelude.rs  servers.rs  team.rs
src/utils/backend/: event.rs  events.rs  msg.rs  participant.rs  servers.rs  team.rs  traits.rs
