[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Living on the edge, but it is necessary, if it crashes just select a commit near october 10th
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"